# ChangeLog for sci-misc/stanford-tagger
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  25 Oct 2011; Justin Lecher <jlec@gentoo.org> metadata.xml:
  Removed no-herd from herd tag in metadata.xml

  04 Jul 2010; Andreas K. Huettel (dilfridge) <mail@akhuettel.de>
  stanford-tagger-20060521.ebuild:
  Silence repoman

*stanford-tagger-20060521 (04 Jan 2008)

  04 Jan 2008; Flammie Pirinen <flammie@gentoo.org>
  +stanford-tagger-20060521.ebuild :
  Initial import.