@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
-	<maintainer>
-		<email>flammie@gentoo.org</email>
-	</maintainer>
-	<longdescription>
+  <maintainer>
+    <email>flammie@gentoo.org</email>
+  </maintainer>
+  <longdescription>
   University of Stanford’s Natural language pos tagger. Uses log linear
   pos taggers such as Maximum Entropy model tagging.
 </longdescription>
