@@ -1,6 +1,10 @@
 # ChangeLog for sci-misc/stanford-tagger
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  12 Nov 2014; Justin Lecher <jlec@gentoo.org> stanford-tagger-20060521.ebuild,
+  metadata.xml:
+  Bump to EAPI=5
 
   25 Oct 2011; Justin Lecher <jlec@gentoo.org> metadata.xml:
   Removed no-herd from herd tag in metadata.xml
